// Vitest Snapshot v1

exports[`Options > resolve 1`] = `
Object {
  "dirs": Array [
    Object {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "exclude": Array [],
  "extendRoute": undefined,
  "extensions": Array [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "importMode": "async",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "vue",
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;

exports[`Options > resolve 2`] = `
Object {
  "dirs": Array [
    Object {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "exclude": Array [],
  "extendRoute": undefined,
  "extensions": Array [
    "tsx",
    "jsx",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\)\\$/,
  "importMode": "sync",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "react",
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;
